--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000" />
 		<meta name="msapplication-TileColor" content="#000000" />
+		
 
 		<title>WebLarek</title>
 		<meta name="description" content="" />
@@ -43,7 +44,7 @@
 		</div>
 
 		<!-- Модальное окно превью товара -->
-		<div class="modal" id="modal-preview">
+		<div class="modal">
 			<div class="modal__container">
 				<button class="modal__close" aria-label="закрыть"></button>
 				<div class="modal__content">
